--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "e2e": "ng e2e",
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
-
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
     "postinstall": "ngcc --properties es2015 es5 browser module main --first-only --create-ivy-entry-points --tsconfig \"./src/tsconfig.app.json\""
   },
@@ -43,6 +42,7 @@
     "@angular/platform-browser-dynamic": "12.1.0",
     "@angular/router": "12.1.0",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "@nebular/auth": "8.0.0",
     "@nebular/eva-icons": "8.0.0",
     "@nebular/security": "8.0.0",
